Fixes issues with modals, mainly sizing and  blurry text due to transforms cx/#2703, cx/#2704

--- a/app/assets/stylesheets/pano/global/_modals.sass
+++ b/app/assets/stylesheets/pano/global/_modals.sass
@@ -8,11 +8,20 @@ $z: 1000
   display: none
   position: fixed
   z-index: $z
-  .modal
-    z-index: $z+2
-    top: 50%
-    transform: translateY(-50%) translateX(-50%)
+  .modal-wrapper
+    position: fixed
     left: 50%
+    top: 50%
+    top: 50%
+    z-index: $z+2
+    +mobile
+      left: 0
+      right: 0
+      top: 0
+      bottom: 0
+
+    .modal
+      z-index: $z+2
 
   .modal-bg
     position: fixed
@@ -28,10 +37,10 @@ $z: 1000
     opacity: 0.5
 
 =modal
-  position: fixed
+  position: relative
   max-width: 560px
   max-height: 90%
-  margin: 0 auto
+  margin: -50% 0 0 -50%
   overflow: auto
   padding: 24px
   font-family: $font-stack
@@ -41,9 +50,14 @@ $z: 1000
   box-shadow: 0px 4px 16px 0 rgba(0, 0, 0, 0.2)
 
   +mobile
-    width: 90%
-    max-width: 90%
-    max-height: 90%
+    left: 0
+    right: 0
+    top: 0
+    bottom: 0
+    width: 100%
+    height: 100%
+    min-height: 100%
+    max-height: 100%
 
 .modal
   +modal
@@ -108,6 +122,11 @@ $z: 1000
     max-width: 480px
   &.calendar
     max-width: 600px
+  &.color-picker-modal
+    min-height: 340px
+  +mobile
+    max-width: 100%
+    min-height: 100%
   .modal-header
     padding: 0
     border-bottom: none
